# minGPT

./: .gitignore  pyproject.toml
