[tool.poetry]
name = "mingpt"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"
numpy = "^1.23.0"
wandb = "^0.12.20"
tensorboard = "^2.9.1"
hyperstate = "^0.3.12"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
